# TFM-Improving-Graphics-Engines

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt  Controller.h  EditorLayer.cpp  EditorLayer.h  GameViewPanel.cpp  GameViewPanel.h  Observer.h  Preferences.cpp  Preferences.h  PreferencesController.cpp  PreferencesController.h  PreferencesWindow.cpp  PreferencesWindow.h  RendererDebugPanel.cpp  RendererDebugPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  Subject.h  UIHelpers.h  main.cpp
engine/: CMakeLists.txt
engine/assets/: AssetIndex.cpp  AssetIndex.h  AssetManager.cpp  AssetManager.h
engine/core/: Entry.cpp  ExportedVariablesManager.cpp  ExportedVariablesManager.h  Window.cpp
engine/input/: Input.cpp  Input.h
engine/project/: ProjectSerializer.cpp
engine/renderer/: DebugPass.cpp  DebugPass.h  DeferredPass.cpp  DeferredPass.h  ForwardPass.cpp  ForwardPass.h  FrameBuffer.cpp  FrameBuffer.h  GuiPass.cpp  GuiPass.h  Material.h  Mesh.cpp  Mesh.h  PostprocessPass.cpp  PostprocessPass.h  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp
engine/scene/: Components.cpp  Components.h  Scene.cpp  Scene.h  SceneSerializer.cpp
runtime/: CMakeLists.txt  RuntimeLayer.cpp  RuntimeLayer.h
tools/: CMakeLists.txt  nimo_scene_multiplier.cpp
